# raffles

./: .gitignore  README.md  pyproject.toml  requirements.txt
apps/product/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
apps/raffle/: models.py  urls.py  views.py
apps/store/: admin.py  apps.py  urls.py  utils.py  views.py
apps/user/: apps.py  forms.py  models.py  urls.py  views.py
core/: asgi.py  settings.py  urls.py  views.py  wsgi.py
fixtures/: category_fixture.json  product_fixture.json  user_fixture.json
fixtures/store/: address_fixture.json  automatic_buy_fixture.json  order_fixture.json  promotion_fixture.json  quota_fixture.json
product/: apps.py  forms.py  models.py  tests.py  views.py
raffle/: admin.py  apps.py  asgi.py  forms.py  models.py  settings.py  tests.py  urls.py  views.py  wsgi.py
raffle/migrations/: 0001_initial.py  0002_rename_name_raffle_title.py
src/: admin.py  models.py  serializer.py  url.py  views.py
src/migrations/: 0001_initial.py
static/css/: styles.css  styles.css.map  styles.scss
static/utils/: normalize.js
store/: apps.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
store/migrations/: 0001_initial.py  0002_rename_cartitems_cartitem.py
store/models/: __init__.py  address.py  automatic_buy.py  media.py  order.py  promotion.py  quota.py
templates/: base.html  base_admin.html
templates/admin/: dashboard.html
templates/components/: alert.html  hero.html  (+5 more)
templatetags/: image.py
user/: admin.py  forms.py  models.py  serializer.py  tests.py  urls.py  utils.py  views.py
(+60 files in other folders)
