[tool.poetry]
name = "raffles"
version = "0.1.0"
description = "Ecomerce to Raffles"
authors = ["Leonardo Barros <leonardobarrosdw@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "3.8.1"
Django = "5.0.4"
django-environ = "0.11.2"
Markdown = "3.6"
pillow = "10.3.0"
sqlparse = "0.5.0"
typing_extensions = "4.11.0"
django-cleanup = "^8.1.0"
qrcode = "^7.4.2"
mercadopago = "^2.2.3"

[tool.poetry.group.test]

[tool.poetry.group.test.dependencies]
django-debug-toolbar = "^4.4.2"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
